# simplified-raft-consensus

./: CMakeLists.txt  README.md  config.json
include/: Epoll.h  KeyValueStore.h  RaftNode.h  Server.h  Socket.h  TSQueue.h  ThreadPool.h
src/: Epoll.cpp  KeyValueStore.cpp  RaftNode.cpp  Server.cpp  Socket.cpp  ThreadPool.cpp  main.cpp
